[package]
name = "colourful-logger"
license = "MIT"
version = "0.1.2"
edition = "2021"
keywords = ["logging", "minimal", "logger", "colourful-logging"]
categories = ["development-tools::debugging", "development-tools::testing"]
description = "A minimal colourful logger for Rust"
repository = "https://github.com/devtomos/colourful-logger"

[dependencies]
colored = "2"
pad = "0.1"
chrono = "0.4.38"